--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Low Health Alert",
   "author": "Kobrakon",
   "license": "NCSA",
-  "version": "1.0.0"
+  "version": "0.0.3 Prerelease"
   "dependencies": {}
-  "akiVersion": "2.3.1"
+  "akiVersion": ">2.3.0"
 }
